2007-03-04  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* gtkrc-utils.c:
	* gtkrc-utils.h:
	Move gtkrc-utils into capplets/common

2007-02-28  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (load_theme_names): Replace a deprecated function
	(color_select), (gnome_theme_details_init): Rename color_select() to gtk_color_scheme_changed()

2007-02-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-installer.c: (transfer_done_tarbz2_idle_cb): fix
	harmless copy'n'paste error

2007-02-22  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-details.c: (color_select): color components in
	GdkColor are guint16 not guint8, so format accordingly. Fixes bug
	398331.

2007-02-22  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_find_named):
	* gtkrc-utils.h: constify arg to fix a compiler warning

2007-02-22  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-details.c: (color_select): update selected_fg_color
	from the correct slot. Fixes bug 410764.

2007-02-08  Thomas Wood  <thos@gnome.org>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* gnome-theme-details.c: (gtk_theme_update_remove_button),
	(update_color_scheme_tab), (gtk_theme_selection_changed),
	(color_select), (revert_color_scheme_key),
	(gnome_theme_details_init), (update_color_buttons_from_string),
	(gnome_theme_details_update_from_gconf): Listens for changes in the
	gtk-color-scheme property of GtkSettings. Fixes bug 405210.

2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-theme-details.c: (update_color_scheme_tab), (remove_theme),
	(gnome_theme_details_init):
	* gnome-theme-installer.c: (extract_files_error_dialog):
	* gnome-theme-manager.c: (get_lockdown_status):
	Fix compiler warnings. Correct order of args to a gnome_vfs_xfer
	function.

2007-01-26  Thomas Wood  <thos@gnome.org>

	Patch by: Alberto Ruiz <aruiz@synaptia.net>

	* gnome-theme-installer.c: (transfer_done_cb),
	(gnome_theme_install_from_uri): Fixes on the suffix checks.

2007-01-23  Thomas Wood  <thos@gnome.org>
